; ModuleID = '/home/carl/AnghaBench/mpv/ta/extr_ta_utils.c_ta_calc_prealloc_elems.c'
source_filename = "/home/carl/AnghaBench/mpv/ta/extr_ta_utils.c_ta_calc_prealloc_elems.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i64 @ta_calc_prealloc_elems(i64 %0) #0 {
  %2 = alloca i64, align 8
  %3 = alloca i64, align 8
  store i64 %0, i64* %3, align 8
  %4 = load i64, i64* %3, align 8
  %5 = icmp uge i64 %4, 9223372036854775806
  br i1 %5, label %6, label %7

6:                                                ; preds = %1
  store i64 -1, i64* %2, align 8
  br label %11

7:                                                ; preds = %1
  %8 = load i64, i64* %3, align 8
  %9 = add i64 %8, 1
  %10 = mul i64 %9, 2
  store i64 %10, i64* %2, align 8
  br label %11

11:                                               ; preds = %7, %6
  %12 = load i64, i64* %2, align 8
  ret i64 %12
}


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
